vvvebjs/css/editor.css
/* ... */
#vvveb-builder #left-panel,
#vvveb-builder #right-panel {
  border-color: #ddd;
  border-style: solid;
  border-width: 0px;
  background-color: #fff;
  height: 100%;
  position: fixed;
  z-index: 10;
}
#vvveb-builder #left-panel {
  top: 0px;
  float: left;
  border-right-width: 1px;
  overflow: hidden;
  /*
  		box-shadow: 1px 0px 2px rgba(0,0,0,.1);
  		-moz-box-shadow: 1px 0px 2px rgba(0,0,0,.1);
  		-webkit-box-shadow: 1px 0px 2px rgba(0,0,0,.1);
  */
  background: -moz-linear-gradient(left, #fff 85%, #fafbfc 100%);
  background: -webkit-linear-gradient(left, #fff 85%, #fafbfc 100%);
  background: linear-gradient(left, #fff 85%, #fafbfc 100%);
  box-shadow: -1px -2px 2px #f3f3f3 inset;
  width: 14vw;
  width: calc(var(--builder-left-panel-width));
  height: 100%;
  max-height: 100%;
}
#vvveb-builder #left-panel #filemanager, #vvveb-builder #left-panel #components-tree {
  height: 250px;
  width: 27vw;
  height: var(--builder-filemanager-height);
  width: calc(var(--builder-left-panel-width));
  border-bottom: 1px solid #ddd;
}
#vvveb-builder #left-panel #filemanager .header, #vvveb-builder #left-panel #components-tree .header {
  font-size: 11px;
  font-weight: 600;
  height: 2rem;
  margin: 0;
  padding: 0;
  width: 100%;
  line-height: 2rem;
  text-align: left;
  padding-left: 1rem;
  border-bottom: 1px solid #ddd;
  margin-bottom: 0rem;
  padding: 0rem 0.5rem;
  padding: 0rem 0rem 0.5rem 1rem;
}
#vvveb-builder #left-panel #filemanager .header a, #vvveb-builder #left-panel #components-tree .header a {
  color: #007bff;
}
#vvveb-builder #left-panel #filemanager .tree, #vvveb-builder #left-panel #components-tree .tree {
  height: 210px;
  height: calc(var(--builder-filemanager-height) - 40px);
  padding: 0.5rem 0rem;
  overflow-y: hidden;
  overflow-x: hidden;
}
#vvveb-builder #left-panel #filemanager .tree:hover, #vvveb-builder #left-panel #components-tree .tree:hover {
  overflow-y: auto;
}
#vvveb-builder #left-panel #filemanager .tree::-webkit-scrollbar, #vvveb-builder #left-panel #components-tree .tree::-webkit-scrollbar {
  width: 0.5rem;
  background-color: rgba(255, 255, 255, 0.1);
  -webkit-box-shadow: none;
}
#vvveb-builder #left-panel #filemanager .tree::-webkit-scrollbar-track, #vvveb-builder #left-panel #components-tree .tree::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.05);
}
#vvveb-builder #left-panel #filemanager .tree::-webkit-scrollbar-thumb, #vvveb-builder #left-panel #components-tree .tree::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.15);
  outline: 1px solid slategrey;
}
#vvveb-builder #left-panel .components-list,
#vvveb-builder #left-panel .blocks-list,
#vvveb-builder #left-panel .component-properties {
  width: var(--builder-left-panel-width);
}
#vvveb-builder #right-panel {
  top: calc(var(--db-panel-height) + var(--builder-header-top-height));
  float: right;
  right: 0px;
  border-left-width: 1px;
  float: right;
  transition: margin-right 0.1s linear;
  -moz-transition: margin-right 0.1s linear;
  -webkit-transition: margin-right 0.1s linear;
  background: -moz-linear-gradient(right, #fff 85%, #fafbfc 100%);
  background: -webkit-linear-gradient(right, #fff 85%, #fafbfc 100%);
  background: linear-gradient(right, #fff 85%, #fafbfc 100%);
  box-shadow: 1px -2px 2px #f3f3f3 inset;
  width: var(--builder-right-panel-width);
  height: calc( 100vh - (var(--builder-header-top-height) + var(--builder-bottom-panel-height)) - var(--db-panel-height));
}
#vvveb-builder #right-panel .components-list,
#vvveb-builder #right-panel .blocks-list,
#vvveb-builder #right-panel .component-properties {
  width: var(--builder-right-panel-width);
}
#vvveb-builder #top-panel {
  height: 40px;
  border-bottom: 1px solid #ccc;
  text-align: center;
  background-color: #fafafa;
  top: var(--db-panel-height);
  left: var(--builder-left-panel-width);
  position: fixed;
  width: 100%;
  border-top: 1px solid #ccc;
  display: flex;
  box-shadow: 0px 0px 4px #ccc;
}
#vvveb-builder #top-panel .dropdown-item.flag-icon {
  display: block;
  margin-left: -1rem;
  padding-left: 4rem;
  margin-top: 0.5rem;
}
#vvveb-builder #top-panel .dropdown-item.flag-icon:hover, #vvveb-builder #top-panel .dropdown-item.flag-icon:focus, #vvveb-builder #top-panel .dropdown-item.flag-icon:active {
  background-color: transparent;
  font-weight: bold;
}
#vvveb-builder #top-panel .btn-group .btn {
  padding: 0.25rem 0.5rem;
  font-size: 1.25rem;
}
#vvveb-builder #top-panel .btn-group.responsive-btns .btn {
  font-size: 1.6rem;
  padding: 0rem 0.5rem;
}
#vvveb-builder #bottom-panel {
  width: auto;
  height: 0px;
  bottom: 0px;
  position: fixed;
  border-top: 1px solid #ddd;
  left: 14vw;
  left: calc($builder-left-panel-width + $builder-canvas-margin);
  left: calc(var(--builder-left-panel-width) + var(--builder-canvas-margin));
  right: 12vw;
  right: var(--builder-right-panel-width);
  background-color: #fff;
}
#vvveb-builder #bottom-panel #vvveb-code-editor {
  width: 100%;
  height: 100%;
}
#vvveb-builder #bottom-panel #vvveb-code-editor textarea {
  height: 100%;
  width: 100%;
  border: none;
  font-size: 14px;
  margin-bottom: 10px;
  background: #fafafa;
}
#vvveb-builder.bottom-panel-expand #bottom-panel {
  height: 33%;
}
#vvveb-builder.bottom-panel-expand #canvas {
  height: 67%;
}
#vvveb-builder .drag-elements {
  padding-top: 0rem;
}
#vvveb-builder .drag-elements > .header {
  background: #fafafa;
}
#vvveb-builder .drag-elements > .header .search {
  position: relative;
}
#vvveb-builder .drag-elements > .header .search .form-control {
  border-color: #fff;
  border-bottom-color: #ddd;
  border-radius: 0px;
}
#vvveb-builder .drag-elements > .header .search .form-control:focus {
  border-color: #80bdff;
}
#vvveb-builder .drag-elements > .header .search .form-control::placeholder {
  /*font-size: $font-size-sm;*/
  font-size: 0.75rem;
}
/* ... */

